Bug 890394 - Prevent incorrect state transition. r=doublec